--- a/palette/style.css
+++ b/palette/style.css
@@ -87,16 +87,16 @@ body {
   /* flex-wrap: wrap; */
 }
 
-.block {
+.figure {
   border: 1px solid blue;
+  /* display: inline-block; */
   position: relative;
   width: 220px;
   height: 220px;
   margin: 1px 1px;
   background-color: grey;
-  /* display: inline-block; */
   float: left;
-  z-index: 10;
+  z-index: 1;
 }
 
 .pallete li,
@@ -149,6 +149,7 @@ li:hover {
 .blue-color {
   background-color: blue;
 }
+
 
 .transform-to-circle {
   border-radius: 999px;
